<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_in_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="url_developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="url_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="my_email">rin63@mail.ru</string>
    <string name="back">Назад</string>
    <string name="download">Загрузка</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="track_time">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="type_intent">*/*</string>
    <string name="library_name">Медиатека</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="warning">На устройстве нет подходящего приложения</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="title_for_new_playlist_dialog">Завершить создание плейлиста?</string>
    <string name="message_for_new_playlist_dialog">Все несохраненные данные будут потеряны</string>
    <string name="neutral_button_for_new_playlist_dialog">Отмена</string>
    <string name="positive_button_for_new_playlist_dialog">Завершить</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="No">Нет</string>
    <string name="Yes">Да</string>
    <string name="ok">OK</string>
    <string name="no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="save">Сохранить</string>
    <string name="redact">Редактировать</string>
</resources>