<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginTop="14dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal" />

        <Button
            android:id="@+id/searchButton"
            style="@style/ButtonStyle"
            android:layout_marginTop="40dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/libraryButton"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/padding_large"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/library"
            app:icon="@drawable/library" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_marginBottom="28dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/settings"
            app:icon="@drawable/settings" />

</LinearLayout>