<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/white_to_black_color"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_14"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/settings"
        android:textColor="?attr/black_to_white_color"
        android:textFontWeight="500"
        android:textSize="@dimen/text_22" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="40dp"
        android:height="@dimen/margin_61"
        android:text="@string/dark_theme"
       android:theme="@style/SwitchTheme"

       />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_61"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16">

        <TextView
            android:id="@+id/share_app"
            style="@style/TextStyle"
            android:text="@string/share_app" />

        <ImageView
            style="@style/ImageStyle"
            android:src="@drawable/share" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_61"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16">

        <TextView
            android:id="@+id/write_in_support"
            style="@style/TextStyle"
            android:text="@string/write_in_support" />

        <ImageView
            style="@style/ImageStyle"
            android:src="@drawable/support" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_61"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16">

        <TextView
            android:id="@+id/user_agreement"
            style="@style/TextStyle"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/ImageStyle"
            android:src="@drawable/arrow_forward" />

    </FrameLayout>

</LinearLayout>