<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    android:orientation="vertical">

    <TextView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="28dp"
        android:drawableTint="?attr/colorSecondary"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/library_name"
        android:textColor="?attr/colorSecondary"
        android:textFontWeight="500"
        android:textSize="@dimen/text_normal"
        app:drawableStartCompat="@drawable/arrow_back" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_large"
        android:background="?attr/colorSecondaryVariant"
        app:tabIndicatorColor="?attr/colorSecondary"
        app:tabIndicatorFullWidth="true"
        app:tabMode="fixed"
        app:tabTextAppearance="@style/TextForLibraryTab"
        app:tabTextColor="?attr/colorSecondary">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_tracks" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>