<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/white_to_black_color"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_14"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/search"
        android:textColor="?attr/black_to_white_color"
        android:textFontWeight="500"
        android:textSize="@dimen/text_22" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/shape"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="13dp"
            android:src="@drawable/search"
            app:iconPadding="10dp"
            app:tint="?attr/gray_to_black_color" />

        <EditText
            android:id="@+id/inputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="9dp"
            android:layout_weight="1"
            android:background="@null"
            android:color="?attr/black_to_black_color"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="?attr/black_to_black_color"
            android:textColorHint="?attr/gray_to_black_color"
            android:textCursorDrawable="@drawable/cursor"
            android:textFontWeight="400"
            android:textSize="@dimen/text_16"
            app:fontFamily="@font/ys_display_regular" />

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin_14"
            android:src="@drawable/close"
            android:visibility="gone"
            app:tint="?attr/gray_to_black_color" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_24" />

    <LinearLayout
        android:id="@+id/containerForHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/search_history"
            android:textColor="?attr/black_to_white_color"
            android:textFontWeight="500"
            android:textSize="19sp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/textHistory">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20" />

                <Button
                    android:id="@+id/buttonHistory"
                    style="@style/ButtonStyle"
                    android:layout_below="@id/recyclerHistory"
                    android:layout_centerHorizontal="true"
                    android:text="@string/clear_history" />

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/containerForError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/error_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/close" />

            <TextView
                android:id="@+id/error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:textColor="?attr/black_to_white_color"
                android:textFontWeight="400"
                android:textSize="19sp" />

            <Button
                android:id="@+id/updateButton"
                style="@style/ButtonStyle"
                android:layout_gravity="center"
                android:text="@string/update" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/containerForProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue" />

    </FrameLayout>

</LinearLayout>

